--- a/home/nvim/README
+++ b/home/nvim/README
@@ -1,12 +1,20 @@
 Neovim checklist:
 - Initialize Neovim plugins:
-  1. Install VimPlug:
+  1. Install Packer:
      ```
      git clone --depth 1 https://github.com/wbthomason/packer.nvim \
        ~/.local/share/nvim/site/pack/packer/start/packer.nvim && \
        nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
      ```
-  2. Install fzf:
-     - [MacOS] `brew install fzf`
-  3. Install fd:
-     - [MacOS] `brew install fd`
+  2. Install fzf-lua dependencies:
+     - fzf:
+       - [MacOS] `brew install fzf`
+     - fd:
+       - [MacOS] `brew install fd`
+  3. Install LSP servers:
+    - Lua:
+      - [MacOS] `brew install lua-language-server`
+    - Ruby:
+      - [MacOS] TODO
+    - Rust:
+      - [MacOS] `brew install rust-analyzer`
